welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:24: error: ';' expected but 'for' found.
} for (tutu <- 1 to 9) {
  ^